Classic themes: lapiz: avoid borders in scrollbars
With border, the up/down buttons doesn't work properly in fullscreen

--- a/desktop-themes/ClassicGreen/ctk-3.0/cafe-applications.css
+++ b/desktop-themes/ClassicGreen/ctk-3.0/cafe-applications.css
@@ -488,10 +488,6 @@ na-tray-applet {
     border-style: solid;
 }
 
-.lapiz-window > box.vertical > paned.horizontal > paned.vertical > notebook > stack > box.vertical > scrolledwindow > scrollbar.vertical {
-    border-width: 0px 1px 0px 0px;
-}
-
 /*********
  * Atril *
  *********/
